--- a/public/package.json
+++ b/public/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "ng-gapi": "0.0.73",
+    "ngx-socket-io": "^3.0.1",
+    "ngx-youtube-player": "^7.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
