--- a/public/package.json
+++ b/public/package.json
@@ -12,14 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.5",
+    "@angular/cdk": "~8.2.2",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
     "@angular/core": "~8.2.5",
     "@angular/forms": "~8.2.5",
+    "@angular/material": "^8.2.2",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
     "@types/jquery": "^3.3.31",
+    "hammerjs": "^2.0.8",
     "ng-gapi": "0.0.73",
     "ngx-socket-io": "^3.0.1",
     "ngx-youtube-player": "^7.1.1",
