--- a/public/angular.json
+++ b/public/angular.json
@@ -25,7 +25,8 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.css"
+              "src/styles.css",
+              "src/public-theme.scss"
             ],
             "scripts": []
           },
