--- a/public/angular.json
+++ b/public/angular.json
@@ -24,9 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/custom-theme.scss",
-              "src/styles.css",
-              "src/public-theme.scss"
+              "src/styles.css"            
             ],
             "scripts": []
           },
