--- a/public/angular.json
+++ b/public/angular.json
@@ -20,14 +20,16 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": [
-              "src/favicon.ico",
+              "src/favicon.png",
               "src/assets"
             ],
             "styles": [
               "src/custom-theme.scss",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/static/scripts.js"
+            ]
           },
           "configurations": {
             "production": {
