--- a/public/package.json
+++ b/public/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
     "@ryancavanaugh/gapi.youtube": "^3.0.14-alpha",
+    "@types/dom-mediacapture-record": "^1.0.1",
     "@types/gapi": "0.0.39",
     "@types/jquery": "^3.3.31",
     "@ycm.jason/eslint-config": "^1.3.1",
