--- a/public/angular.json
+++ b/public/angular.json
@@ -20,8 +20,9 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/favicon.png",
+              "src/assets",
+              "src/assets/img/shareoke.png"
             ],
             "styles": [
               "src/custom-theme.scss",
