--- a/public/package.json
+++ b/public/package.json
@@ -32,6 +32,7 @@
     "ng-youtube-embed": "^1.7.16",
     "ng2-youtube-player": "0.0.31",
     "ngx-socket-io": "^3.0.1",
+    "ngx-webcam": "^0.2.6",
     "ngx-youtube-player": "^7.1.1",
     "node-fetch": "^2.6.0",
     "quicklyrics": "^1.0.2",
