--- a/public/package.json
+++ b/public/package.json
@@ -26,6 +26,7 @@
     "@types/gapi": "0.0.39",
     "@types/jquery": "^3.3.31",
     "@ycm.jason/eslint-config": "^1.3.1",
+    "@zxing/ngx-scanner": "^2.0.1",
     "hammerjs": "^2.0.8",
     "js-azlyrics": "^0.2.3",
     "ng-gapi": "0.0.73",
